--- a/simple-todo/package.json
+++ b/simple-todo/package.json
@@ -13,6 +13,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
+    "react-native-google-signin": "^1.0.0-rc8",
     "react-native-swipe-list-view": "^1.3.1",
     "react-navigation": "^2.18.2"
   },
